--- a/nicepage.css
+++ b/nicepage.css
@@ -42564,111 +42564,117 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 76px;
+  min-height: 132px;
 }
 
 .u-header .u-menu-1 {
-  margin: 20px auto;
+  margin: 30px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
-  font-size: 1rem;
-  letter-spacing: 0px;
-  text-transform: uppercase;
   font-weight: 500;
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: normal;
 }
 
 .u-header .u-nav-2 {
   font-size: 1rem;
 }
 
+.u-header .u-image-1 {
+  width: 74px;
+  height: 74px;
+  margin: -55px auto 11px 29px;
+}
+@media (max-width: 1199px) {
+  .u-header .u-image-1 {
+    width: 74px;
+    height: 74px;
+    margin-top: -55px;
+  }
+}
 
 
 
 .u-footer .u-sheet-1 {
-  min-height: 342px;
+  min-height: 259px;
 }
 
 .u-footer .u-layout-wrap-1 {
-  margin: 60px auto 0 0;
+  margin: 60px 0;
 }
 
 .u-footer .u-layout-cell-1 {
-  background-image: none;
-  min-height: 131px;
+  min-height: 102px;
 }
 
 .u-footer .u-container-layout-1 {
   padding: 20px 30px;
 }
 
+.u-footer .u-text-1 {
+  font-size: 1.5rem;
+}
+
 .u-footer .u-layout-cell-2 {
-  min-height: 131px;
+  min-height: 102px;
 }
 
 .u-footer .u-container-layout-2 {
   padding: 20px 30px;
 }
 
+.u-footer .u-text-3 {
+  font-size: 1.5rem;
+}
+
 .u-footer .u-layout-cell-3 {
-  min-height: 131px;
+  min-height: 173px;
 }
 
 .u-footer .u-container-layout-3 {
   padding: 20px 30px;
 }
 
-.u-footer .u-line-1 {
-  transform-origin: right center 0px;
-  width: 1140px;
-  margin: 30px auto 0 0;
+.u-footer .u-position-3 {
+  height: auto;
+  min-height: 43px;
+  width: 186px;
+  margin: 0 114px 0 0;
+}
+
+.u-footer .u-text-5 {
+  font-size: 1.5rem;
 }
 
 .u-footer .u-social-icons-1 {
   white-space: nowrap;
-  height: 32px;
+  height: 39px;
   min-height: 16px;
-  width: 220px;
-  min-width: 140px;
-  margin: 20px 42px 0 auto;
+  width: 186px;
+  min-width: 94px;
+  margin: 0 auto 0 0;
 }
 
 .u-footer .u-icon-1 {
-  color: rgb(59, 89, 152) !important;
-  height: 32px;
+  height: 26px;
 }
 
 .u-footer .u-icon-2 {
-  color: rgb(85, 172, 238) !important;
-  height: 32px;
+  height: 26px;
 }
 
 .u-footer .u-icon-3 {
-  color: rgb(197, 54, 164) !important;
-  height: 32px;
+  height: 26px;
 }
 
 .u-footer .u-icon-4 {
-  height: 32px;
-}
-
-.u-footer .u-icon-5 {
-  height: 32px;
-}
-
-.u-footer .u-image-1 {
-  width: 64px;
-  height: 32px;
-  margin: -32px auto 60px 26px;
-}
-
-.u-footer .u-logo-image-1 {
-  width: 100%;
-  height: 100%;
+  height: 26px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
-    min-height: 305px;
+    min-height: 241px;
   }
 
   .u-footer .u-layout-wrap-1 {
@@ -42676,41 +42682,28 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-left: initial;
   }
 
-  .u-footer .u-container-layout-1 {
-    padding-left: 25px;
-    padding-right: 25px;
+  .u-footer .u-layout-cell-3 {
+    min-height: 102px;
   }
 
-  .u-footer .u-line-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-footer .u-social-icons-1 {
-    margin-right: 17px;
-  }
-
-  .u-footer .u-image-1 {
-    margin-top: -21px;
-    margin-left: 21px;
+  .u-footer .u-position-3 {
+    margin-right: 47px;
   }
 }
 @media (max-width: 991px) {
-  .u-footer .u-container-layout-1 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-footer .u-social-icons-1 {
-    margin-right: 13px;
-  }
-
-  .u-footer .u-image-1 {
-    margin-left: 16px;
+  .u-footer .u-sheet-1 {
+    min-height: 257px;
   }
 }
 @media (max-width: 767px) {
+  .u-footer .u-sheet-1 {
+    min-height: 357px;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: auto;
+  }
+
   .u-footer .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
@@ -42733,24 +42726,8 @@ a.u-link.u-text-hover-grey-90:hover {
     padding-left: 10px;
     padding-right: 10px;
   }
-
-  .u-footer .u-social-icons-1 {
-    margin-right: 10px;
-  }
-
-  .u-footer .u-image-1 {
-    margin-left: 12px;
-  }
 }
-@media (max-width: 575px) {
-  .u-footer .u-social-icons-1 {
-    margin-right: 6px;
-  }
 
-  .u-footer .u-image-1 {
-    margin-left: 8px;
-  }
-}
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
