--- a/Home.css
+++ b/Home.css
@@ -13,23 +13,16 @@
   right: 0;
 }
 
- .u-section-1-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/11.jpg");
-  background-position: 50% 50%;
-}
-
 .u-section-1-1 .u-sheet-1 {
   min-height: 800px;
 }
 
 .u-section-1-1 .u-group-1 {
-  width: 800px;
-  min-height: 250px;
+  width: 578px;
+  min-height: 588px;
   height: auto;
-  box-shadow: 0px -2px 8px 0px rgba(128,128,128,1);
-  --top-right-radius: 50px;
-  --bottom-left-radius: 50px;
-  margin: 275px auto;
+  --radius: 50px;
+  margin: 60px auto;
 }
 
 .u-section-1-1 .u-container-layout-1 {
@@ -38,9 +31,16 @@
 
 .u-section-1-1 .u-text-1 {
   font-size: 4.5rem;
-  font-family: "Allerta Stencil";
   font-weight: 700;
-  margin: 0 auto;
+  font-family: Cinzel-VariableFont_wght;
+  margin: 34px 0 0;
+}
+
+.u-section-1-1 .u-text-2 {
+  font-family: Cinzel-VariableFont_wght;
+  font-size: 1.125rem;
+  font-weight: 700;
+  margin: 61px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -57,10 +57,6 @@
 @media (max-width: 991px) {
   .u-section-1-1 .u-sheet-1 {
     min-height: 506px;
-  }
-
-  .u-section-1-1 .u-group-1 {
-    width: 720px;
   }
 }
 
@@ -91,160 +87,6 @@
   .u-section-1-1 .u-text-1 {
     font-size: 1.5rem;
   }
-}
-
- .u-section-1-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/pexels-dima-valkov-3266700.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-1-2 .u-sheet-1 {
-  min-height: 800px;
-}
-
-.u-section-1-2 .u-group-1 {
-  width: 800px;
-  min-height: 250px;
-  height: auto;
-  box-shadow: 0px -2px 8px 0px rgba(128,128,128,1);
-  margin: 275px auto;
-}
-
-.u-section-1-2 .u-container-layout-1 {
-  padding: 30px;
-}
-
-.u-section-1-2 .u-text-1 {
-  font-weight: 700;
-  font-size: 4.5rem;
-  margin: 0 auto;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1-2 .u-sheet-1 {
-    min-height: 660px;
-  }
-
-  .u-section-1-2 .u-group-1 {
-    --radius: 25px;
-    height: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1-2 .u-sheet-1 {
-    min-height: 506px;
-  }
-
-  .u-section-1-2 .u-group-1 {
-    width: 720px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-1-2 .u-sheet-1 {
-    min-height: 380px;
-  }
-
-  .u-section-1-2 .u-group-1 {
-    width: 540px;
-  }
-
-  .u-section-1-2 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1-2 .u-sheet-1 {
-    min-height: 239px;
-  }
-
-  .u-section-1-2 .u-group-1 {
-    width: 340px;
-  }
-
-  .u-section-1-2 .u-text-1 {
-    font-size: 1.5rem;
-  }
-}
-
- .u-section-1-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/pexels-engin-akyurt-1457801.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-1-3 .u-sheet-1 {
-  min-height: 800px;
-}
-
-.u-section-1-3 .u-group-1 {
-  width: 800px;
-  min-height: 250px;
-  height: auto;
-  box-shadow: 0px -2px 8px 0px rgba(128,128,128,1);
-  margin: 275px auto;
-}
-
-.u-section-1-3 .u-container-layout-1 {
-  padding: 30px;
-}
-
-.u-section-1-3 .u-text-1 {
-  font-weight: 700;
-  font-size: 4.5rem;
-  margin: 0 auto;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1-3 .u-sheet-1 {
-    min-height: 660px;
-  }
-
-  .u-section-1-3 .u-group-1 {
-    --radius: 25px;
-    height: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1-3 .u-sheet-1 {
-    min-height: 506px;
-  }
-
-  .u-section-1-3 .u-group-1 {
-    width: 720px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-1-3 .u-sheet-1 {
-    min-height: 380px;
-  }
-
-  .u-section-1-3 .u-group-1 {
-    width: 540px;
-  }
-
-  .u-section-1-3 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1-3 .u-sheet-1 {
-    min-height: 239px;
-  }
-
-  .u-section-1-3 .u-group-1 {
-    width: 340px;
-  }
-
-  .u-section-1-3 .u-text-1 {
-    font-size: 1.5rem;
-  }
 } .u-section-2 {
   background-image: none;
 }
@@ -261,7 +103,7 @@
 
 .u-section-2 .u-image-1 {
   min-height: 701px;
-  background-image: url("images/pexels-ayush-phillip-2732096.jpg");
+  background-image: url("images/pexels-photo-8395022.jpeg");
   background-position: 50% 50%;
 }
 
@@ -317,13 +159,21 @@
   font-size: 3rem;
   font-weight: 700;
   text-transform: uppercase;
-  margin: 0 auto 0 0;
+  margin: 0 auto 0 1px;
 }
 
 .u-section-2 .u-text-4 {
   line-height: 2;
   font-size: 1.25rem;
-  margin: 20px 0 0;
+  margin: 20px 1px 0;
+}
+
+.u-section-2 .u-btn-1 {
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-image: none;
+  margin: 32px 0 0 auto;
 }
 
 @media (max-width: 1199px) {
@@ -354,7 +204,11 @@
   }
 
   .u-section-2 .u-layout-cell-4 {
-    min-height: 475px;
+    min-height: 338px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-right: 0;
   }
 }
 
@@ -396,7 +250,7 @@
   }
 
   .u-section-2 .u-layout-cell-4 {
-    min-height: 558px;
+    min-height: 100px;
   }
 
   .u-section-2 .u-container-layout-4 {
@@ -438,10 +292,6 @@
 
   .u-section-2 .u-container-layout-3 {
     padding: 30px;
-  }
-
-  .u-section-2 .u-layout-cell-4 {
-    min-height: 100px;
   }
 
   .u-section-2 .u-container-layout-4 {
@@ -487,7 +337,7 @@
 
 .u-section-3 .u-image-1 {
   min-height: 632px;
-  background-image: url("images/pexels-scott-webb-177332.jpg");
+  background-image: url("images/yuliya-yevseyeva-CJpEAnDgxr0-unsplash.jpg");
   background-position: 50% 50%;
 }
 
@@ -526,7 +376,7 @@
 
 .u-section-3 .u-image-4 {
   min-height: 317px;
-  background-image: url("images/pexels-kenneth-surillo-5157364.jpg");
+  background-image: url("images/jacek-dylag-agsdDgRW2Ps-unsplash.jpg");
   background-position: 50% 50%;
   background-size: auto 180%;
 }
@@ -804,9 +654,9 @@
 
 .u-section-5 .u-image-2 {
   min-height: 336px;
-  background-image: url("images/pexels-transtudios-photography--video-3091637.jpg");
-  background-position: 50% 50%;
-  background-size: auto 180%;
+  background-image: url("images/content-pixie-M_M6w-7ZBD0-unsplash.jpg");
+  background-position: 100% 100%;
+  background-size: 110%;
 }
 
 .u-section-5 .u-container-layout-3 {
@@ -815,9 +665,9 @@
 
 .u-section-5 .u-image-3 {
   min-height: 336px;
-  background-image: url("images/pexels-pixabay-266621.jpg");
-  background-position: 51.92% 77.86%;
-  background-size: auto 335%;
+  background-image: url("images/esther-verdu-z3I6QNClKLk-unsplash.jpg");
+  background-position: 35.27% 0%;
+  background-size: auto 130%;
 }
 
 .u-section-5 .u-container-layout-4 {
@@ -981,7 +831,7 @@
     min-height: 353px;
   }
 } .u-section-6 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/pexels-fox-998521.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/susan-wilkinson-QrPsfcm7fFI-unsplash.jpg");
 }
 
 .u-section-6 .u-sheet-1 {
